# Receipts

./: .gitignore  README.md  alembic.ini  config.py  main.py  pyproject.toml  requirements.txt
app/: asgi.py  dependencies.py
app/api/v1/: logging.json  router.py
app/api/v1/auth/: models.py  router.py
app/api/v1/exceptions/: invalid_payment_amount.py
app/api/v1/receipts/: filters.py  models.py  receipt_generator.py  router.py
app/api/v1/security/: authenticator.py
app/database/: models.py
migrations/versions/: 334316009044_database_init.py  8f0e7e74e42f_products_init.py  a5bd6234903d_add_user_id_to_receipts.py  fe204a2166e9_receipts.py
tests/: conftest.py
tests/api/v1/: auth_test.py  receipts_test.py
