[tool.poetry]
name = "receipts"
version = "0.1.0"
description = ""
authors = ["Plummy <plummybeatsoff@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.11"
uvicorn = "^0.34.0"
pydantic = {extras = ["email"], version = "^2.10.6"}
pydantic-settings = "^2.8.1"
sqlalchemy = "^2.0.39"
psycopg = "^3.2.6"
psycopg-binary = "^3.2.6"
alembic = "^1.15.1"
pytest = "^8.3.5"
argon2-cffi = "^23.1.0"
pyjwt = "^2.10.1"
pytz = "^2025.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

